--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,14 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+
+// SB Admin Pro
+// @import "sb-admin";
+
+// Custom CSS
+@import "custom";
